<resources>
    <string name="app_name">Dota Skills Timer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DataBaseName">HeroDatabase</string>
    <string name="hero_list_title">Hero list</string>
    <string name="transition_name">enemyPick</string>
    <string name="transition_name_hero_1">enemyPick1</string>
    <string name="transition_name_hero_2">enemyPick2</string>
    <string name="transition_name_hero_3">enemyPick3</string>
    <string name="transition_name_hero_4">enemyPick4</string>
    <string name="transition_name_hero_5">enemyPick5</string>
    <string name="advanced_attributes">loh</string>
    <string name="title_stylish_preference" />
    <string name="summary_stylish_preference" />
    <string name="basic_preferences">basic</string>
    <string name="widgets">widgets</string>
    <string name="dialogs">dialog</string>
    <string name="action_settings">settings</string>
    <string name="add">add</string>
    <string name="abilityMinCallDownForShow">ability_duration</string>
    <string name="settings">Settings</string>
    <string name="hide">hide</string>
    <string name="select_item">Select item</string>
    <string name="enemy_draft">enemy team cannot have more than 5 heroes</string>
    <string name="animation">animations_setting</string>
    <string name="refresh_db">refresh_db</string>
    <string name="new_patch_arrive">when did the new patch arrive</string>
    <string name="refresh_heroes_info">Refresh heroes info</string>
    <string name="data_is_actual">data is actual</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="data_was_refreshed">data was refreshed</string>
    <string name="passive_or_charges">It\'s passive ability or ability with charges</string>
    <string name="check_internet">\"Check internet connection \"</string>
    <string name="default_min_cooldawn">15</string>
</resources>
