<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/heroes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@drawable/appliacation_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ten_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/twenty_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/thirty_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forty_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fifty_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />
    <com.srgpanov.dotaskillstimer.ui.views.AspectRatioImageView
        android:id="@+id/image_view_heroes_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_name_hero_1"
        app:layout_constraintLeft_toLeftOf="@id/heroes_layout"
        app:layout_constraintTop_toTopOf="@id/heroes_layout"
        app:layout_constraintWidth_percent="0.2" />

    <com.srgpanov.dotaskillstimer.ui.views.TimerImageView
        android:id="@+id/buyback_image_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/buyback_used_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_1"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_1"
        app:layout_constraintTop_toBottomOf="@id/image_view_heroes_1"
        app:timer_milisec="480000" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="@id/image_view_heroes_1"
            app:layout_constraintStart_toStartOf="@id/image_view_heroes_1"
            app:layout_constraintTop_toBottomOf="@id/buyback_image_1"
            app:layout_constraintVertical_bias="0"
            >
            <LinearLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>
        </androidx.core.widget.NestedScrollView>
    <ImageButton
        android:id="@+id/add_image_button_1"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/add_button"
        android:src="@drawable/ic_add_black_24dp"
        android:text="@string/add"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_1"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_1"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_1" />

    <com.srgpanov.dotaskillstimer.ui.views.AspectRatioImageView
        android:id="@+id/image_view_heroes_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_name_hero_2"
        app:layout_constraintLeft_toRightOf="@id/image_view_heroes_1"
        app:layout_constraintTop_toTopOf="@id/heroes_layout"
        app:layout_constraintWidth_percent="0.2" />

    <com.srgpanov.dotaskillstimer.ui.views.TimerImageView
        android:id="@+id/buyback_image_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/buyback_used_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_2"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_2"
        app:layout_constraintTop_toBottomOf="@id/image_view_heroes_2"
        app:timer_milisec="480000" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_2"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_2"
        app:layout_constraintTop_toBottomOf="@id/buyback_image_2"
        app:layout_constraintVertical_bias="0">
        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>
    </androidx.core.widget.NestedScrollView>
    <ImageButton
        android:id="@+id/add_image_button_2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/add_button"
        android:src="@drawable/ic_add_black_24dp"
        android:text="@string/add"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_2"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_2"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_2" />

    <com.srgpanov.dotaskillstimer.ui.views.AspectRatioImageView
        android:id="@+id/image_view_heroes_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_name_hero_3"
        app:layout_constraintLeft_toRightOf="@id/image_view_heroes_2"
        app:layout_constraintTop_toTopOf="@id/heroes_layout"
        app:layout_constraintWidth_percent="0.2" />

    <com.srgpanov.dotaskillstimer.ui.views.TimerImageView
        android:id="@+id/buyback_image_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/buyback_used_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_3"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_3"
        app:layout_constraintTop_toBottomOf="@id/image_view_heroes_3"
        app:timer_milisec="480000" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_3"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_3"
        app:layout_constraintTop_toBottomOf="@id/buyback_image_3"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0">
        <LinearLayout
            android:id="@+id/linear_layout_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>
    </androidx.core.widget.NestedScrollView>
    <ImageButton
        android:id="@+id/add_image_button_3"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/add_button"
        android:src="@drawable/ic_add_black_24dp"
        android:text="@string/add"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_3"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_3"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_3" />

    <com.srgpanov.dotaskillstimer.ui.views.AspectRatioImageView
        android:id="@+id/image_view_heroes_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_name_hero_4"
        app:layout_constraintLeft_toRightOf="@id/image_view_heroes_3"
        app:layout_constraintTop_toTopOf="@id/heroes_layout"
        app:layout_constraintWidth_percent="0.2" />

    <com.srgpanov.dotaskillstimer.ui.views.TimerImageView
        android:id="@+id/buyback_image_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/buyback_used_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_4"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_4"
        app:layout_constraintTop_toBottomOf="@id/image_view_heroes_4"
        app:timer_milisec="480000" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_4"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_4"
        app:layout_constraintTop_toBottomOf="@id/buyback_image_4"
        app:layout_constraintVertical_bias="0">
        <LinearLayout
            android:id="@+id/linear_layout_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>
    </androidx.core.widget.NestedScrollView>
    <ImageButton
        android:id="@+id/add_image_button_4"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/add_button"
        android:src="@drawable/ic_add_black_24dp"
        android:text="@string/add"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_4"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_4"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_4" />

    <com.srgpanov.dotaskillstimer.ui.views.AspectRatioImageView
        android:id="@+id/image_view_heroes_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_name_hero_5"
        app:layout_constraintLeft_toRightOf="@id/image_view_heroes_4"
        app:layout_constraintTop_toTopOf="@id/heroes_layout"
        app:layout_constraintWidth_percent="0.2" />

    <com.srgpanov.dotaskillstimer.ui.views.TimerImageView
        android:id="@+id/buyback_image_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/buyback_used_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_5"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_5"
        app:layout_constraintTop_toBottomOf="@id/image_view_heroes_5"
        app:timer_milisec="480000" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_5"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_5"
        app:layout_constraintTop_toBottomOf="@id/buyback_image_5"
        app:layout_constraintVertical_bias="0">
        <LinearLayout
            android:id="@+id/linear_layout_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>
    </androidx.core.widget.NestedScrollView>
    <ImageButton
        android:id="@+id/add_image_button_5"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/add_button"
        android:src="@drawable/ic_add_black_24dp"
        android:text="@string/add"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/image_view_heroes_5"
        app:layout_constraintStart_toStartOf="@id/image_view_heroes_5"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_5" />

    <com.srgpanov.dotaskillstimer.ui.views.RoshanTimerView
        android:id="@+id/roshan_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.35"
        />

    <com.srgpanov.dotaskillstimer.ui.views.GlyphTimerView
        android:id="@+id/glyph_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.35" />

    <com.srgpanov.dotaskillstimer.ui.views.TimeGameView
        android:id="@+id/time_game_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>